added java 26 content. Cleaned docs and sepereated content from controllers